<resources>
<!--    <string name="app_name">咪乐</string>-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register_new_user">注册用户</string>
    <string name="login">登录</string>
    <string name="user_name">用戶名</string>
    <string name="psw">密码</string>
    <string name="forget_psw">忘记密码</string>
    <string name="forget_psw_sign">忘记密码?</string>
    <string name="remember_psw">记住密码</string>
    <string name="go_to_walk">先去逛逛</string>
    <string name="please_input_four_eleven_num_letter">请输入4-11位数字或者字母</string>
    <string name="please_input_six_twelve_num_letter">请输入6-12位字母或者数字</string>
    <string name="personal_service">人工客服</string>
    <string name="return_login">返回登录</string>
    <string name="register">注册</string>
    <string name="confirm_psw">确认密码</string>
    <string name="please_input_four_ten_num">请输入4-10位数字</string>
    <string name="extension_code_can_not">推广码（可不填）</string>
    <string name="click_btn_to_verify">点击按钮进行验证</string>
    <string name="identify_register">验证码注册</string>
    <string name="user_name_regiter">用户名注册</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="register_please_verify_code">输入验证码</string>
    <string name="phone_num">手机号</string>
    <string name="please_input_eleven_phone">请输入11位手机号码</string>
    <string name="confirm">确认</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_phone_num">请输入手机号</string>
    <string name="please_input_verify_code">请输入短信验证码</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="search_interesting_content">搜索感兴趣的内容</string>
    <string name="video">视频</string>
    <string name="short_video">短视频</string>
    <string name="square">支付</string>
    <string name="activity">活动</string>
    <string name="anchor">主播</string>
    <string name="game">游戏</string>
    <string name="user_center">个人中心</string>
    <string name="recommended">推荐</string>
    <string name="special_topic">专题</string>
    <string name="high_definition_codeless">高清无码</string>
    <string name="homegrown_selfile">国产自拍</string>
    <string name="most_new_update">最新更新</string>
    <string name="mine">我的</string>
    <string name="please_input_right_phone_num">请输入正确的手机号</string>
    <string name="please_input_right_psw">请输入正确的密码</string>
    <string name="not_equals_input_twice">密码输入不一致</string>
    <string name="register_success">注册成功</string>
    <string name="change_psw_success">密码修改成功</string>
    <string name="play_recorder">播放记录</string>
    <string name="edit">编辑</string>
    <string name="circle">圈子</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="mine_extension">我要推广</string>
    <string name="charge_center">充值中心</string>
    <string name="task_center">任务中心</string>
    <string name="mine_vip">我的VIP</string>
    <string name="system_set">系统设置</string>
    <string name="feedback">意见反馈</string>
    <string name="about_me">关于我们</string>
    <string name="office_chart_group">官方交流群</string>
    <string name="more_type">更多分类</string>
    <string name="nv_info">女优资料</string>
    <string name="please_input_right_phone_num_or_user_name">请输入用户名或密码</string>
    <string name="please_input_right_user_name">请输入正确的用户名</string>
    <string name="change_success">修改成功</string>
    <string name="please_input_inck_name">请输入昵称</string>
    <string name="bind_success">绑定成功</string>
    <string name="copy_cuccess">复制成功</string>
    <string name="feedback_success">反馈成功</string>
    <string name="charge">充值</string>
    <string name="please_input_content">请输入内容</string>
    <string name="already_newest_version">当前已是最新版本</string>
    <string name="loading_please_waite">加载中，请稍后</string>
    <string name="url_error_please_contact_administor">url错误</string>
    <string name="load_failed">加载失败</string>
    <string name="save_qr_code_album_success">保存图片成功</string>
    <string name="m_cancel">取消</string>
    <string name="mine_zone">我的空间</string>
    <string name="message_center">消息中心</string>
    <string name="apply_player">申请主播</string>
    <string name="service_center">客服中心</string>
    <string name="gender">性别</string>
    <string name="loading">加载中</string>
    <string name="not_develop_please_waite">此功能尚未开放，尽请期待</string>
    <string name="delete_image_ok">是否移除该图片</string>
    <string name="delete_video_ok">是否移除该视频</string>
    <string name="delete_txt_ok">是否移除该选项</string>
    <string name="tip">提示</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="manager">管理</string>
    <string name="text_live_preview">发布直播</string>
    <string name="btn_return">返回</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_sure">确定</string>
    <string name="text_live_add_title_tips">给你的直播设置一个满意的封面</string>
    <string name="text_live_title_input">请输入直播标题</string>
    <string name="text_live_notice_input">请输入直播公告</string>
    <string name="text_publish">开始直播</string>
    <string name="text_live_close_lbs">不显示地理位置</string>
    <string name="btn_take_photo">拍照</string>
    <string name="btn_pic_photo">从手机相册选择</string>
    <string name="btn_return_home">返回首页</string>
    <string name="warning_no_network">网络异常</string>
    <string name="empty">暂无记录</string>
    <string name="server">咪乐客服</string>
    <string name="wallet">咪乐钱包</string>
    <string name="wallet2">咪乐钱包：</string>
    <string name="nobility">咪乐贵族</string>
    <string name="wallet_action">咪乐钱包用途</string>
    <string name="balance">欢乐豆</string>
    <string name="get_balance">获取咪豆</string>
    <string name="scan_qr">扫描二维码，下载咪乐App</string>
    <string name="wallet3">咪乐钱包（元）</string>
    <string name="share_desc">* 亲朋好友是首选\n建议大家分享给身边的亲朋好友一起来体验咪乐* 亲朋好友是首选\n建议大家分享给身边的亲朋好友一起来体验咪乐</string>
    <string name="balance_less">您的咪乐余额不足，建议立即充值哦</string>
    <string name="game_tip">1.将咪乐钱包的金额转至游戏钱包中，才能参与相关游戏 \n2.参与游戏前，请确认好游戏钱包中的余额是否充足</string>
    <string name="official">咪乐官方</string>
    <string name="sign_in_title">7日连续签到，轻松拿咪豆</string>
    <string name="balance_tip">千亿体育官方壕气赞助,玩家通过【游戏钱包】千亿官网存款即可享受1:15的咪豆返还，咪豆可用于开通咪乐VIP看片无限制</string>
    <string name="balance_0">咪豆余额:0</string>
    <string name="balance_1">欢乐豆：</string>
    <string name="balance_tip2">1.将咪乐钱包的金额转至游戏钱包中，才能够参与相应的游戏</string>
    <string name="activity_tab">咪乐活动</string>
    <string name="charge_tip">30-200（充值比例：1元=1游戏币+10欢乐豆）</string>

</resources>
