<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ImageView
    android:id="@+id/iv_dismiss"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/xxh_dp_10"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:src="@mipmap/ic_movie_times_dialog_close"/>
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/btn_white_c30_bg"
      android:layout_marginTop="@dimen/xxh_dp_10"
      app:layout_constraintTop_toBottomOf="@+id/iv_dismiss"
      app:layout_constraintBottom_toBottomOf="parent">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toTopOf="parent"
          android:background="@mipmap/bg_quicktransfer_toper"/>
      <TextView
          android:id="@+id/tv_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="快速转账"
          android:textSize="@dimen/xxh_sp_14"
          android:layout_marginTop="@dimen/xxh_dp_10"
          android:textColor="@color/white"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>
      <androidx.cardview.widget.CardView
          android:id="@+id/cv_top"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@+id/tv_title"
          app:cardBackgroundColor="@color/white"
          app:cardCornerRadius="@dimen/xxh_dp_10"
          android:layout_marginStart="@dimen/xxh_dp_10"
          android:layout_marginEnd="@dimen/xxh_dp_10"
          android:layout_marginTop="@dimen/xxh_dp_15">
          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">
              <TextView
                  android:id="@+id/tv_mile_wallet_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black"
                  android:textSize="@dimen/xxh_sp_12"
                  app:layout_constraintEnd_toStartOf="@+id/line1"
                  android:layout_marginTop="@dimen/xxh_dp_10"
                  android:text="@string/wallet"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent"/>
              <TextView
                  android:id="@+id/tv_mile_wallet_num"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black"
                  android:textSize="@dimen/xxh_sp_12"
                  android:text="￥0"
                  android:layout_marginTop="@dimen/xxh_dp_6"
                  app:layout_constraintStart_toStartOf="@+id/tv_mile_wallet_title"
                  app:layout_constraintEnd_toEndOf="@+id/tv_mile_wallet_title"
                  app:layout_constraintTop_toBottomOf="@+id/tv_mile_wallet_title"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginBottom="@dimen/xxh_dp_10"/>
              <View
                  android:id="@+id/line1"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_width="@dimen/xxh_dp_1"
                  android:layout_height="0dp"
                  android:background="@color/colorLightGray"/>
              <TextView
                  android:id="@+id/tv_game_wallet_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black"
                  android:textSize="@dimen/xxh_sp_12"
                  app:layout_constraintStart_toEndOf="@+id/line1"
                  android:layout_marginTop="@dimen/xxh_dp_10"
                  android:text="游戏钱包"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toTopOf="parent"/>
              <TextView
                  android:id="@+id/tv_game_wallet_num"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/black"
                  android:textSize="@dimen/xxh_sp_12"
                  android:text="￥0"
                  android:layout_marginTop="@dimen/xxh_dp_6"
                  app:layout_constraintStart_toStartOf="@+id/tv_game_wallet_title"
                  app:layout_constraintEnd_toEndOf="@+id/tv_game_wallet_title"
                  app:layout_constraintTop_toBottomOf="@+id/tv_game_wallet_title"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:layout_marginBottom="@dimen/xxh_dp_10"/>
          </androidx.constraintlayout.widget.ConstraintLayout>
      </androidx.cardview.widget.CardView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/xxh_dp_10"
        android:background="@drawable/btn_gray_c30_bg"
        app:layout_constraintTop_toBottomOf="@+id/cv_top">
        <EditText
            android:id="@+id/et_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="请输入金额"
            android:layout_marginStart="@dimen/xxh_dp_10"
            app:layout_constraintEnd_toStartOf="@+id/tv_unit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="元"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
      <TextView
          android:id="@+id/tv_tip"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/xxh_dp_10"
          android:text="@string/balance_less"
          android:textColor="@color/colorFFA199"
          android:textSize="@dimen/xxh_sp_12"
          android:layout_marginTop="@dimen/xxh_dp_8"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/cl_input" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxh_dp_10"
            app:layout_constraintTop_toBottomOf="@+id/tv_tip"/>
      <TextView
          android:id="@+id/tv_desc1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/xxh_dp_10"
          android:text="@string/balance_tip2"
          android:textSize="@dimen/xxh_sp_10"
          android:layout_marginTop="@dimen/xxh_dp_8"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/recycler_view" />
      <TextView
          android:id="@+id/tv_desc2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/xxh_dp_10"
          android:text="1.参与游戏前，请确认好游戏钱包中的余额是否充足"
          android:textSize="@dimen/xxh_sp_10"
          android:layout_marginTop="@dimen/xxh_dp_8"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_desc1" />
      <TextView
          android:id="@+id/tv_confirm"
          android:layout_width="match_parent"
          android:layout_height="@dimen/xxh_dp_50"
          android:layout_marginStart="@dimen/xxh_dp_20"
          android:layout_marginTop="@dimen/xxh_dp_20"
          android:gravity="center"
          android:text="确认转账"
          android:textSize="@dimen/xxh_sp_14"
          android:background="@drawable/btn_transfer_c30_bg"
          app:layout_goneMarginStart="@dimen/xxh_dp_20"
          android:layout_marginEnd="@dimen/xxh_dp_20"
          app:layout_constraintTop_toBottomOf="@+id/tv_desc2"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />
      <TextView
          android:id="@+id/tv_recharge"
          android:layout_width="match_parent"
          android:layout_height="@dimen/xxh_dp_50"
          android:layout_marginStart="@dimen/xxh_dp_20"
          android:layout_marginTop="@dimen/xxh_dp_20"
          android:gravity="center"
          android:text="立即充值"
          android:textSize="@dimen/xxh_sp_14"
          android:background="@drawable/btn_recharge_c30_bg"
          app:layout_goneMarginStart="@dimen/xxh_dp_20"
          android:layout_marginEnd="@dimen/xxh_dp_20"
          app:layout_constraintTop_toBottomOf="@+id/tv_confirm"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />
      <TextView
          android:id="@+id/tv_join_game"
          android:layout_width="match_parent"
          android:layout_height="@dimen/xxh_dp_50"
          android:layout_marginStart="@dimen/xxh_dp_20"
          android:layout_marginTop="@dimen/xxh_dp_20"
          android:gravity="center"
          android:text="进入游戏"
          android:textSize="@dimen/xxh_sp_14"
          android:background="@drawable/btn_recharge_c30_bg"
          app:layout_goneMarginStart="@dimen/xxh_dp_20"
          android:layout_marginEnd="@dimen/xxh_dp_20"
          app:layout_constraintTop_toBottomOf="@+id/tv_recharge"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="@dimen/xxh_dp_20"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>